# SurvStudio

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: software_versions.md
examples/: README.md  tcga_luad_nature2014_upload_ready.csv  tcga_luad_rnaseq_top1000_upload.csv  tcga_luad_rnaseq_top100_upload.csv  tcga_luad_rnaseq_top500_upload.csv
src/survival_toolkit/: __init__.py  __main__.py  analysis.py  app.py  deep_models.py  encoding.py  errors.py  evaluation.py  ml_models.py  plots.py  sample_data.py  store.py
src/survival_toolkit/data/: gbsg2_upload_ready.csv  tcga_luad_xena_example.csv
src/survival_toolkit/static/: app.js  app_benchmark.js  app_downloads.js  app_shell.js  styles.css
src/survival_toolkit/templates/: index.html
tests/: test_analysis.py  test_app.py  test_beginner_survstudio_flows.py  test_browser_e2e.py  test_deep_models.py  test_ml_models.py  test_plots.py
