[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survival-toolkit"
version = "0.1.0"
description = "Local-first survival analysis dashboard with optional ML/DL tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "numpy>=1.26.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.2",
  "plotly>=6.0.0",
  "pyarrow>=17.0.0",
  "python-multipart>=0.0.9",
  "scipy>=1.13.0",
  "scikit-learn>=1.4.0",
  "statsmodels>=0.14.4",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
ml = [
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
]
dl = [
  "torch>=2.0.0",
]
all = [
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
  "torch>=2.0.0",
  "httpx>=0.28.1",
  "pytest>=8.3.5",
]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
  "torch>=2.0.0",
]

[project.scripts]
survival-toolkit = "survival_toolkit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
survival_toolkit = [
  "data/*.csv",
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "static/vendor/*.js",
  "static/fonts/*.woff2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
