[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survival-toolkit"
version = "0.1.0"
description = "Local-first survival analysis dashboard with optional ML/DL tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "numpy>=1.26.0",
  "pandas>=2.2.2",
  "plotly>=6.0.0",
  "python-multipart>=0.0.9",
  "scipy>=1.13.0",
  "statsmodels>=0.14.4",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
formats = [
  "openpyxl>=3.1.5",
  "pyarrow>=17.0.0",
  "xlrd>=2.0.1",
]
ml = [
  "scikit-learn>=1.4.0",
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
]
dl = [
  "scikit-learn>=1.4.0",
  "torch>=2.0.0",
]
e2e = [
  "playwright>=1.52.0",
]
all = [
  "openpyxl>=3.1.5",
  "pyarrow>=17.0.0",
  "xlrd>=2.0.1",
  "scikit-learn>=1.4.0",
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
  "torch>=2.0.0",
  "httpx>=0.28.1",
  "kaleido>=0.2.1",
  "playwright>=1.52.0",
  "pytest>=8.3.5",
]
dev = [
  "httpx>=0.28.1",
  "kaleido>=0.2.1",
  "openpyxl>=3.1.5",
  "pyarrow>=17.0.0",
  "pytest>=8.3.5",
  "scikit-survival>=0.23.0",
  "shap>=0.45.0",
  "torch>=2.0.0",
  "xlrd>=2.0.1",
]

[project.scripts]
survival-toolkit = "survival_toolkit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
survival_toolkit = [
  "data/*.csv",
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "static/vendor/*.js",
  "static/fonts/*.woff2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
